--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -48,11 +49,12 @@
                     <button><img src="./img/dot.svg" alt="leftArrow"></button>
                     <button><img src="./img/dot.svg" alt="leftArrow"></button>
                     <button><img src="./img/right.svg" alt="leftArrow"></button>
-
-
                 </div>
             </div>
         </header>
+
+
+        section.
     <!--Header/Navbar-->
 
 
