--- a/dump.html
+++ b/dump.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brath</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    <!--Header-->
+    <!--Header/Navbar-->
         <header class="hItems">
             <div class="hLogo">
                 <img src="./img/logo.svg" alt="Brath">
             </div>
-
-            <nav class="navBar">
+            <div class="navbar">
                 <ul>
                     <li class="navItems"><a href="#" class="navLink">Die Metzgerei</a></li>
                     <li class="navItems"><a href="#" class="navLink">Dry Aged</a></li>
@@ -28,22 +28,37 @@
                         <a href="" class="navLink download"><img src="./img/navDowload.svg" alt="download icon"> download</a>
                     </li>
                 </ul>
-            </nav>
+            </div>
 
             <div class="hWorkTime">
                 <img src="" alt="clock">
                 <p class="workTime">Test</p>
             </div>
 
-            <div class="hero">
+            <div class="hHero">
                 <div class="heroText">
                     <h2>Header</h2>
                     <p>Text</p>
                 </div>
-            </div>
-            
-        </header>
-    <!--Header-->
 
+                <div class="hBottom">
+                    <button><img src="./img/left.svg" alt="leftArrow"></button>
+                    <button><img src="./img/dot.svg" alt="leftArrow"></button>
+                    <button><img src="./img/dot.svg" alt="leftArrow"></button>
+                    <button><img src="./img/dot.svg" alt="leftArrow"></button>
+                    <button><img src="./img/dot.svg" alt="leftArrow"></button>
+                    <button><img src="./img/dot.svg" alt="leftArrow"></button>
+                    <button><img src="./img/right.svg" alt="leftArrow"></button>
+                </div>
+            </div>
+        </header>
+
+
+        section.
+    <!--Header/Navbar-->
+
+
+
+    
 </body>
 </html>
