--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
       </section>
 
-      <div class="hero" id="diemetz">
+      <div class="hero">
         <div class="heroText">
           <h2>Heiko Brath <br />Metzgermeister</h2>
           <p>
@@ -106,12 +106,12 @@
             <div class="glTxt">
                 <h2>Buchen Sie den <br/>Grillkurs jetzt</h2>
                 <ul>
-                  <li>professioneller Lehrer</li>
-                  <li>ausgezeichneter Metzger</li>
-                  <li>1 Tag</li>
-                  <li>lernen Sie die Kunst des Grillens</li>
+                  <li><span class="lItem">professioneller Lehrer</span></li>
+                  <li><span class="lItem">ausgezeichneter Metzger</span></li>
+                  <li><span class="lItem">1 Tag</span></li>
+                  <li><span class="lItem">lernen Sie die Kunst des Grillens</span></li>
                 </ul>
-                <button id="grillbtn">Grillkurs</button>
+                <button class="grillbtn">Grillkurs</button>
             </div>
         </div>
 
@@ -184,6 +184,7 @@
       <!--Fleischversand-->
       <section class="fleischversand">
         <h2>Fleischversand</h2>
+        <button class="flbtn">Jetzt bestellen</button>
       </section>
       <!--Fleischversand-->
 
