--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <!--Header-->
     <header class="hItems">
       <nav class="navBar">
-        <img src="./img/logo.svg" alt="Brath" />
+        <div class="navLogo">
+            <img src="./img/logo.svg" alt="Brath" />
+        </div>
         <ul class="nav">
           <li class="navItems">
             <a href="#" class="navLink">Die Metzgerei</a>
@@ -42,7 +44,7 @@
         <div class="maxWidth">
           <img src="./img/clock.svg" alt="clock.svg" />
           <span>
-            Opentime: Di. - Fr.: 07:00-13:00 und 15:00-18:30. Sa.: 07:30 - 12:30
+            <span style="font-weight: bold;">Opentime:</span> Di. - Fr.: 07:00-13:00 und 15:00-18:30. Sa.: 07:30 - 12:30
             </span>
         </div>
       </section>
@@ -165,18 +167,21 @@
         </div>
 
         <div class="cusRight">
-          <h2>Custome spices for your meat</h2>
-          <h3>Turnbeutel nostrud exercitation ullamco Sprechen Sie deutsch</h3>
+          <div class="crTxt">
+            <h2>Custome spices for your meat</h2>
+            <h3>Turnbeutel nostrud exercitation ullamco Sprechen Sie deutsch</h3>
+  
+            <p>
+              Odio principes iracundia Müller Rice pri. Ut vel solum mandamus,
+              Kartoffelkopf natum adversarium ei ius, diam Schmetterling
+              honestatis eum. Wiener Schnitzel amet, consectetur Handtasche elit,
+              sed do eiusmod tempor Stuttgart ut labore et dolore magna 99
+              Luftballons Ut enim ad minim veniam, Turnbeutel nostrud exercitation
+              ullamco laboris nisi Sprechen Sie deutsch aliquip ex ea commodo
+              consequat.
+            </p>
+          </div>
 
-          <p>
-            Odio principes iracundia Müller Rice pri. Ut vel solum mandamus,
-            Kartoffelkopf natum adversarium ei ius, diam Schmetterling
-            honestatis eum. Wiener Schnitzel amet, consectetur Handtasche elit,
-            sed do eiusmod tempor Stuttgart ut labore et dolore magna 99
-            Luftballons Ut enim ad minim veniam, Turnbeutel nostrud exercitation
-            ullamco laboris nisi Sprechen Sie deutsch aliquip ex ea commodo
-            consequat.
-          </p>
         </div>
       </section>
       <!--custome-->
@@ -188,6 +193,7 @@
       </section>
       <!--Fleischversand-->
 
+      <!--end_Section-->
       <section class="endSec">
         <div class="endTop">
           <div class="eTopLeft">
@@ -199,30 +205,31 @@
 
             <button>Gehen zu site</button>
           </div>
-          <img src="./img/vonal 1.svg" alt="vonal" />
         </div>
 
+        <img src="./img/vonal 1.svg" alt="vonal" />
+
         <div class="endMid">
-          <h2>Auszeichnungen</h2>
 
           <div class="awardSection">
+            <h2>Auszeichnungen</h2>
             <div class="award">
-              <img class="awIMG" src="./img/nagrada1.svg" alt="n1" />
+              <img class="awIMG" src="./img/nagrada1.png" alt="n1" />
               <p>Tollit argumentum genau Saepe lobortis</p>
             </div>
 
             <div class="award">
-              <img class="awIMG" src="./img/nagrada2.svg" alt="n2" />
+              <img class="awIMG" src="./img/nagrada2.png" alt="n2" />
               <p>Schneewittchen denique</p>
             </div>
 
             <div class="award">
-              <img class="awIMG" src="./img/nagrada3.svg" alt="n3" />
+              <img class="awIMG" src="./img/nagrada3.png" alt="n3" />
               <p>Grimms Märchen expetenda</p>
             </div>
 
             <div class="award">
-              <img class="awIMG" src="./img/nagrada4.svg" alt="n4" />
+              <img class="awIMG" src="./img/nagrada4.png" alt="n4" />
               <p>Mettwurst mei ullum gloriatur.</p>
             </div>
           </div>
@@ -230,10 +237,31 @@
           <img src="./img/vonal 1.svg" alt="vonal" />
         </div>
       </section>
+      <!--end_Section-->
     </main>
     <!--Main-->
 
     <!--Footer-->
+      <footer>
+        <div class="contact">
+          <div class="location">
+            <img src="./img/pin.svg" alt="pin">
+            <p>Klauprechtstraße 25 <br> 76137 Karlsruhe, Germany</p>
+          </div>
+        </div>
+        <div class="logo">
+
+        </div>
+        <div class="social">
+
+        </div>
+      </footer>
     <!--Footer-->
   </body>
 </html>
+
+
+<!-- Klauprechtstraße  25
+76137 Karlsruhe, Germany
++49 721 358060
+info@partyservice-brath.de -->
