--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
     <!--Header-->
     <header class="hItems">
       <nav class="navBar">
-        <div class="navLogo">
-            <img src="./img/logo.svg" alt="Brath" />
-        </div>
+        <img id="logo" src="./img/logo.svg" alt="Brath" />
         <ul class="nav">
           <li class="navItems">
             <a href="#" class="navLink">Die Metzgerei</a>
@@ -210,27 +208,26 @@
         <img src="./img/vonal 1.svg" alt="vonal" />
 
         <div class="endMid">
-
           <div class="awardSection">
             <h2>Auszeichnungen</h2>
             <div class="award">
-              <img class="awIMG" src="./img/nagrada1.png" alt="n1" />
-              <p>Tollit argumentum genau Saepe lobortis</p>
+              <img class="awIMG"src="./img/nagrada1.png" alt="n1" />
+              <p>Tollit argumentum <br><span class="awPadding">genau Saepe lobortis</span> </p>
             </div>
 
             <div class="award">
-              <img class="awIMG" src="./img/nagrada2.png" alt="n2" />
-              <p>Schneewittchen denique</p>
+              <img class="awIMG" src="./img/nagrada2.svg" alt="n2" />
+              <p>Schneewittchen <br><span class="awPadding">denique</span> </p>
             </div>
 
             <div class="award">
-              <img class="awIMG" src="./img/nagrada3.png" alt="n3" />
-              <p>Grimms Märchen expetenda</p>
+              <img class="awIMG"src="./img/nagrada3.png" alt="n3" />
+              <p>Grimms Märchen <br><span class="awPadding">expetenda</span> </p>
             </div>
 
             <div class="award">
-              <img class="awIMG" src="./img/nagrada4.png" alt="n4" />
-              <p>Mettwurst mei ullum gloriatur.</p>
+              <img class="awIMG"src="./img/nagrada4.png" alt="n4" />
+              <p>Mettwurst mei <br><span class="awPadding">ullum gloriatur.</span> </p>
             </div>
           </div>
 
@@ -243,17 +240,42 @@
 
     <!--Footer-->
       <footer>
-        <div class="contact">
-          <div class="location">
-            <img src="./img/pin.svg" alt="pin">
-            <p>Klauprechtstraße 25 <br> 76137 Karlsruhe, Germany</p>
+        <div class="container">
+          <div class="contact">
+            <div class="location">
+              <img src="./img/pin.svg" alt="pin">
+              <p>Klauprechtstraße 25 <br> 76137 Karlsruhe, Germany</p>
+            </div>
+  
+            <div class="phone displayProop">
+              <img src="./img/phone.svg" alt="phone">
+              <p>+49 721 358060</p>
+            </div>
+  
+            <div class="mail displayProop">
+              <img src="./img/mail.svg" alt="mail">
+              <p>info@partyservice-brath.de</p>
+            </div>
+          </div>
+  
+          <div class="logo">
+            <img src="./img/logo.svg" alt="logo">
+          </div>
+          
+          <div class="social">
+            <p class="socialP">Besuchen Sie uns auf:</p>
+            <div class="socialIcons">
+              <img src="./img/tw.svg" alt="twitter">
+              <img src="./img/fb.svg" alt="facebook">
+              <img src="./img/ig.svg" alt="instagram">
+              <img src="./img/yt.svg" alt="youtube">
+            </div>
           </div>
         </div>
-        <div class="logo">
 
-        </div>
-        <div class="social">
-
+        <div class="dimmedtrack">
+          <p id="copyrightP">© 2020 by Metzgerei Heiko Brath  GmbH, Deutschland</p>
+          <p id="teampP">Code and design by <span class="studioPresent">StudioPresent</span></p>
         </div>
       </footer>
     <!--Footer-->
