--- a/index.html
+++ b/index.html
@@ -204,24 +204,24 @@
 
       <!--genussnetz-->
       <section class="genussnetz">
-        <div class="endTop">
-          <div class="eTopLeft">
+        <div class="geContent">
+          <div class="geLogo">
             <img src="./img/genussnetz logo 1.svg" alt="genu logo" />
           </div>
 
-          <div class="eTopRight">
+          <div class="geTxt">
             <h2>Metzgerei Brath ist Mitglied <br />im Genussnetzwerk</h2>
-
-            <button class="endSbtn">Gehen zu site</button>
+            <button class="gebtn">Gehen zu site</button>
           </div>
         </div>
+        <img src="./img/vonal 1.svg" alt="vonal" />
       </section>
       <!--genussnetz-->
 
 
         <!--award_section-->
       <section class="awardSection">
-          <img src="./img/vonal 1.svg" alt="vonal" />
+
           <h2>Auszeichnungen</h2>
           <div class="award">
             <img class="awIMG"src="./img/nagrada1.png" alt="n1" />
@@ -252,13 +252,22 @@
       <!--comment_section-->
         <section class="comments">
           <div class="com1">
+            <div class="icon">
+              <img src="./img/grillkurs_icon.svg" alt="grillkurs_icon">
+              <img src="./img/zvezdice.svg" alt="zvezdice">
+            </div>
 
+            <div class="text">
+              <p>
+                Wiener Schnitzel amet, consectetur Handtasche elit, sed do eiusmod tempor Stuttgart ut labore et dolore magna  Luftballons Ut Turnbeutel nostrud exercitation ullamco .
+              </p>
+            </div>
           </div>
           <div class="com2">
 
           </div>
           <div class="com3">
-            
+
           </div>
         </section>
       <!--comment_section-->
