--- a/index.html
+++ b/index.html
@@ -220,59 +220,89 @@
 
 
         <!--award_section-->
-      <section class="awardSection">
+      <section class="award">
+            <div class="awardCon">
+              <h2>Auszeichnungen</h2>
 
-          <h2>Auszeichnungen</h2>
-          <div class="award">
-            <img class="awIMG"src="./img/nagrada1.png" alt="n1" />
-            <p>Tollit argumentum <br><span class="awPadding">genau Saepe lobortis</span> </p>
-          </div>
+              <div class="contentBot">
+                <img class="awIMG"src="./img/nagrada1.png" alt="n1" />
+                <p class="contentP">Tollit argumentum genau <br> Saepe lobortis</p>
+              </div>
 
-          <div class="award">
-            <img class="awIMG" src="./img/nagrada2.svg" alt="n2" />
-            <p>Schneewittchen <br><span class="awPadding">denique</span> </p>
-          </div>
+              <div class="contentBot">
+                <img class="awIMG" src="./img/nagrada2.svg" alt="n2" />
+                <p class="contentP">Schneewittchen <br> denique</p>
+              </div>
 
-          <div class="award">
-            <img class="awIMG"src="./img/nagrada3.png" alt="n3" />
-            <p>Grimms Märchen <br><span class="awPadding">expetenda</span> </p>
-          </div>
+              <div class="contentTop">
+                <img class="awIMG"src="./img/nagrada3.png" alt="n3" />
+                <p class="contentP">Grimms Märchen <br> expetenda</p>
+              </div>
 
-          <div class="award">
-            <img class="awIMG"src="./img/nagrada4.png" alt="n4" />
-            <p>Mettwurst mei <br><span class="awPadding">ullum gloriatur.</span> </p>
-          </div>
-      </section>
-
-          <img src="./img/vonal 1.svg" alt="vonal" />
-        </div>
+              <div class="contentTop">
+                <img class="awIMG" src="./img/nagrada4.png" alt="n4" />
+                <p class="contentP">Mettwurst mei <br> ullum gloriatur.</p>
+              </div>
+            </div>
+            <img id="vonal"src="./img/vonal 1.svg" alt="vonal" />
       </section>
       <!--award_section-->
 
       <!--comment_section-->
         <section class="comments">
-          <div class="com1">
-            <div class="icon">
-              <img src="./img/grillkurs_icon.svg" alt="grillkurs_icon">
-              <img src="./img/zvezdice.svg" alt="zvezdice">
-            </div>
+          <div class="comHeader">
+            <h4>Empfehlungs</h4>
+            <h2>Was die Leute über uns sagen</h2>
+          </div>
+          <div class="cards">
+            <div class="card3 cardWidth inactive">
+              <p class="comment">
+                Sprechen Sie deutsch aliquip ex ea commodo consequat. Wiener Schnitzel aute irure dolor in reprehenderit Guten Tag mollit anim Stuttgart.
+              </p>
 
-            <div class="text">
-              <p>
-                Wiener Schnitzel amet, consectetur Handtasche elit, sed do eiusmod tempor Stuttgart ut labore et dolore magna  Luftballons Ut Turnbeutel nostrud exercitation ullamco .
+              <p class="user">
+                Maria Kartofeln
               </p>
             </div>
-          </div>
-          <div class="com2">
+
+            <div class="active">
+              <div class="cardHead">
+                <img src="./img/grillkurs_icon.svg" alt="grill">
+                <img src="./img/zvezdice.svg" alt="zvezdica">
+              </div>
+
+              <div class="cardText">
+                <p class="comment">
+                  Wiener Schnitzel amet, consectetur Handtasche elit, sed do eiusmod tempor Stuttgart ut labore et dolore magna  Luftballons Ut Turnbeutel nostrud exercitation ullamco .
+                </p>
+                <p class="user">
+                  Halling Tobias<br>
+                  <span class="title">Koch</span>
+                </p>
+              </div>
+              <img id="quote" src="./img/znak.svg" alt="quote">
+              <img id="leftClick" src="./img/leftcursor.svg" alt="left">
+                <img id="rightClick" src="./img/rightCursor.svg" alt="right">
+            </div>
+
+
+            <div class="inactive">
+              <p class="comment">
+                Achtung fur atine indoctum complectitur HugoClub Mate mea meliore denique nominavi id. Ohrwurm expetenda nam an, his ei Reise euismod assentior.
+              </p>
+              <p class="user">
+                Rene Weinstein
+              </p>
+            </div>
 
           </div>
-          <div class="com3">
 
+          <div class="comFooter">
+            <button class="combtn">Alle Berichte</button>
           </div>
         </section>
       <!--comment_section-->
     </main>
-    <!--Main-->
 
     <!--Footer-->
       <footer>
